--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         >codeSTACKr </a
       >&nbsp;!&nbsp; Code on &nbsp;<a
         target="_blank"
-        href="https://codepen.io/curley"
+        href="https://github.com/alimadhibujar/Glassmorphism-Credit-Card-Form"
         >&nbsp;<img src="img/github.svg" alt="Github" />
       </a>
     </p>
