--- a/index.html
+++ b/index.html
@@ -78,11 +78,7 @@
         target="_blank"
         href="https://www.youtube.com/watch?v=jEa9YyRqE1U&ab_channel=codeSTACKr"
         >codeSTACKr </a
-      >&nbsp;!&nbsp; Code on &nbsp;<a
-        target="_blank"
-        href="https://github.com/alimadhibujar/Glassmorphism-Credit-Card-Form"
-        >&nbsp;<img src="img/github.svg" alt="Github" />
-      </a>
+      >&nbsp;!
     </p>
 
     <script src="https://cdn.jsdelivr.net/npm/cleave.js@1.6.0/dist/cleave.min.js"></script>
